# delphi

./: .gitignore  .prettierrc  Cargo.toml  README.md  layout.kdl  openapi.sh  run.sh  setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml
delphi_api/: Cargo.toml  Rocket.toml  build.rs
delphi_api/src/: main.rs
delphi_api/src/models/: auth.rs  mod.rs
delphi_api_lib/: Cargo.toml
delphi_api_lib/src/: config.rs  error.rs  lib.rs  util.rs
delphi_api_lib/src/components/: mod.rs
delphi_api_lib/src/components/search/: info.rs  mod.rs  result.rs
delphi_api_lib/src/models/: auth.rs  mod.rs
delphi_api_lib/src/plugins/types/: enabled_extensions.rs  media.rs  mod.rs  plugin.rs
delphi_api_lib/src/routes/: mod.rs  root.rs
delphi_client/: eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  vite.config.ts
delphi_client/src/: Suspender.tsx  hey-api.ts  main.tsx  style.scss
delphi_client/src/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
delphi_client/src/components/: HeaderContents.tsx  PasswordField.tsx
delphi_client/src/context/: notifications.tsx
delphi_client/src/context/auth/: AuthProvider.tsx  index.ts  types.ts
delphi_client/src/lang/: en.json  provider.tsx
delphi_client/src/routes/: index.ts
delphi_client/src/routes/auth/: AuthView.tsx  auth.scss
delphi_client/src/routes/layout/: Layout.tsx  layout.scss
delphi_client/src/theme/: theme.ts
delphi_macros/: Cargo.toml
delphi_macros/src/: http_error.rs  lib.rs  model.rs
