[package]
name = "delphi_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
deno_core = "0.352.1"
okapi = { version = "0.7.0", features = ["impl_json_schema", "preserve_order"] }
parking_lot = { version = "0.12.4", features = ["serde", "arc_lock"] }
rocket = { version = "0.5.1", features = ["secrets", "tls", "json", "uuid"] }
rocket_okapi = { version = "0.9.0", features = ["preserve_order", "uuid", "secrets", "swagger", "rocket_ws"] }
rocket_ws = "0.1.1"
rustyscript = { version = "0.11.0", features = ["safe_extensions", "io_extensions", "network_extensions", "snapshot_builder"] }
schemars = { version = "1.0.4", features = ["preserve_order", "raw_value", "chrono04", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
