[lib]
proc-macro = true

[package]
name = "delphi_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.8.0"
darling = "0.21.0"
httpstatus = "0.1.2"
manyhow = { version = "0.11.4", features = ["darling", "darling_core"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
